# OpenGL_learning

./: CMakeLists.txt  README.md  glad.c  main.cpp  shader.cpp  shader.frag  shader.h
include/glad/: glad.h
